[gd_scene load_steps=4 format=3 uid="uid://chkm7k502e86"]

[ext_resource type="Script" path="res://Props/Item.gd" id="1_go4gr"]
[ext_resource type="PackedScene" uid="uid://tj0nahkqw2uj" path="res://Systems/Interaction/Interactable.tscn" id="2_8wi8r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7yyqh"]
size = Vector3(0.35, 0.35, 0.35)

[node name="Item" type="Node3D"]
script = ExtResource("1_go4gr")

[node name="Interactable" parent="." instance=ExtResource("2_8wi8r")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.175, 0)
shape = SubResource("BoxShape3D_7yyqh")

[node name="OmniLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.975534, 1.06942e-09, 0.219846, -0.219846, 9.60978e-09, 0.975534, -1.06942e-09, -1, 9.60978e-09, 0.077, 0.261, 0)
light_color = Color(0.79, 0.566167, 0, 1)
spot_range = 0.5
spot_angle = 50.0

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
